# test/meson.build

test_buffer = executable('test_buffer',
                         files('test_buffer.c', 'test.h'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

test_cimba = executable('test_cimba',
                         files('test_cimba.c', 'test.h'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

test_condition = executable('test_condition',
                            files('test_condition.c', 'test.h'),
                            include_directories : [inc_api, inc_int],
                            c_args : ['-Wno-pedantic'],
                            link_with : cimba_lib,
                            link_args : ['-lm'],
                            dependencies : [project_deps],
                            install : false,
                            native : true
)

test_coroutine = executable('test_coroutine',
                            files('test_coroutine.c', 'test.h'),
                            include_directories : [inc_api, inc_int],
                            c_args : ['-Wno-pedantic'],
                            link_with : cimba_lib,
                            link_args : ['-lm'],
                            dependencies : [project_deps],
                            install : false,
                            native : true
)

test_data = executable( 'test_data',
                        files('test_data.c', 'test.h'),
                        include_directories : [inc_api, inc_int],
                        c_args : ['-Wno-pedantic'],
                        link_with : cimba_lib,
                        link_args : ['-lm'],
                        dependencies : [project_deps],
                        install : false,
                        native : true
)

test_event = executable('test_event',
                        files('test_event.c', 'test.h'),
                        include_directories : [inc_api, inc_int],
                        c_args : ['-Wno-pedantic'],
                        link_with : cimba_lib,
                        link_args : ['-lm'],
                        dependencies : [project_deps],
                        install : false,
                        native : true
)

test_hashheap = executable('test_hashheap',
                        files('test_hashheap.c', 'test.h'),
                        include_directories : [inc_api, inc_int],
                        c_args : ['-Wno-pedantic'],
                        link_with : cimba_lib,
                        link_args : ['-lm'],
                        dependencies : [project_deps],
                        install : false,
                        native : true
)

test_logger = executable('test_logger',
                         files('test_logger.c', 'test.h'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

test_mempool = executable('test_mempool',
                         files('test_mempool.c', 'test.h'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

test_objectqueue = executable('test_objectqueue',
                              files('test_objectqueue.c', 'test.h'),
                              include_directories : [inc_api, inc_int],
                              c_args : ['-Wno-pedantic'],
                              link_with : cimba_lib,
                              link_args : ['-lm'],
                              dependencies : [project_deps],
                              install : false,
                              native : true
)

test_process = executable('test_process',
                            files('test_process.c', 'test.h'),
                            include_directories : [inc_api, inc_int],
                            c_args : ['-Wno-pedantic'],
                            link_with : cimba_lib,
                            link_args : ['-lm'],
                            dependencies : [project_deps],
                            install : false,
                            native : true
)

test_random = executable('test_random',
                         files('test_random.c', 'test.h'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

test_resource = executable('test_resource',
                          files('test_resource.c', 'test.h'),
                          include_directories : [inc_api, inc_int],
                          c_args : ['-Wno-pedantic'],
                          link_with : cimba_lib,
                          link_args : ['-lm'],
                          dependencies : [project_deps],
                          install : false,
                          native : true
)

test_resourcestore = executable('test_resourcestore',
                           files('test_resourcestore.c', 'test.h'),
                           include_directories : [inc_api, inc_int],
                           c_args : ['-Wno-pedantic'],
                           link_with : cimba_lib,
                           link_args : ['-lm'],
                           dependencies : [project_deps],
                           install : false,
                           native : true
)

