# tutorial/meson.build

tut_hello = executable('hello',
                         files('hello.c'),
                         include_directories : [inc_api, inc_int],
                         c_args : ['-Wno-pedantic'],
                         link_with : cimba_lib,
                         link_args : ['-lm'],
                         dependencies : [project_deps],
                         install : false,
                         native : true
)

tut_1_1 = executable('tut_1_1',
                       files('tut_1_1.c'),
                       include_directories : [inc_api, inc_int],
                       c_args : ['-Wno-pedantic'],
                       link_with : cimba_lib,
                       link_args : ['-lm'],
                       dependencies : [project_deps],
                       install : false,
                       native : true
)

tut_1_2 = executable('tut_1_2',
                     files('tut_1_2.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

tut_1_3 = executable('tut_1_3',
                     files('tut_1_3.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

tut_1_4 = executable('tut_1_4',
                     files('tut_1_4.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

tut_1_5 = executable('tut_1_5',
                     files('tut_1_5.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

tut_1_6 = executable('tut_1_6',
                     files('tut_1_6.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

tut_1_x = executable('tut_1_x',
                     files('tut_1_x.c'),
                     include_directories : [inc_api, inc_int],
                     c_args : ['-Wno-pedantic'],
                     link_with : cimba_lib,
                     link_args : ['-lm'],
                     dependencies : [project_deps],
                     install : false,
                     native : true
)

